2006-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/pitivi.py:
	Call gtk.gdk.threads_init() to inform pygtk that we might be doing calls
	from remote threads.
	* pitivi/ui/viewer.py:
	The fix to the threading issue was in fact to call
	gtk.gdk.threads_enter() and _leave() before and after calls to gtk
	being made from a non-main thread.

2006-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	gst-python doesn't have the GstError quarks defined yet. Let's just
	use the strings instead.

2006-04-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	We need gnonlin 0.10.2 released 3 days ago.
	* pitivi/ui/viewer.py:
	Some threading madness.... That was a nasty bug.

2006-04-22  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Only make the remove button sensitive when there's at least one source
	in the list.
	* pitivi/ui/viewer.py:
	Properly end drag-and-drop. This should fix some hangs after DnD.

2006-04-21  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.9.9.5 pre-release

2006-04-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Use black pattern for default video source
	* pitivi/ui/timeline.py:
	Don't show the timeline label at the left of the timeline window.
	* pitivi/ui/viewer.py:
	Don't add more than once the bins in the combobox.

2006-04-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Make the Viewer take the remaining space, rather than the sourcelist.
	* pitivi/ui/sourcefactories.py:
	The minimum width of the source list is set to 300pixels.

2006-04-21  Andy Wingo  <wingo@pobox.com>

	* pitivi/objectfactory.py (FileSourceFactory.__gproperties__): Fix
	range of "length" pspec.

	* configure.ac: Remove calls to libtool.

	* autogen.sh: Update to simplify, not run libtoolize.

	* bin/Makefile.am: No need for the makefile rule any more.

	* configure.ac: Output bin/pitivi using AC_CONFIG_FILES, so that
	we can make it executable directly after the configure.
