@@ -1,5 +1,15 @@
 2006-04-24  Edward Hervey  <edward@fluendo.com>
 
+	* pitivi/ui/actions.xml:
+	* pitivi/ui/mainwindow.py:
+	* pitivi/ui/timeline.py:
+	* pitivi/ui/viewer.py:
+	Remove gtk.Frame from useless places.
+	Made the timeline advanced view switcher a ToolAction and add it to the
+	menu and the toolbar.
+
+2006-04-24  Edward Hervey  <edward@fluendo.com>
+
 	* pitivi/pitivi.py:
 	Call gtk.gdk.threads_init() to inform pygtk that we might be doing calls
 	from remote threads.
